cargo-features = ["resolver"]
[package]
name = "node-constants"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

#cargo-features = ["resolver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

node-primitives = {path = '../primitives', default-features = false, version = '1.0.0'}

#[dev-dependencies]
#sp-serializer = { version = "3.0.0"}
#pretty_assertions = "0.6.1"

[features]
default = ['std']
std = [
    "node-primitives/std",
]
