cargo-features = ["resolver"]
[package]
name = "listen-constants"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"
resolver = "2"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
listen-primitives = {path = '../primitives', default-features = false, version = '1.0.0'}

[features]
default = ['std']
std = [
    "listen-primitives/std",
]
