
[package]
name = "listen-primitives"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13'  }
sp-application-crypto = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-core = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

serde = { version = "1.0.101" }


[dev-dependencies]
sp-serializer = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pretty_assertions = "0.6.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-system/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
#	"evm/std",
#	"evm/with-serde",
]

