[package]
name = "listen-traits"
version = "1.0.0"
authors = ["transxask <orwx71@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.12' }
[features]
default = ["std"]
std = [
    "sp-std/std",
]
