[package]
name = "pallet-listen"
version = "1.0.0"
authors = ["LISTEN TEAM"]
edition = "2021"

license = "Apache-2.0"
homepage = "https://github.com/listenofficial/"
repository = "https://github.com/listenofficial/listen-parachain.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scale-info = { version = "1.0", default-features = false, features = ["derive"] }

# substrate fram
frame-support = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
frame-system = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-multisig = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-timestamp = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
pallet-treasury = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }

#local
listen-primitives = { path = '../../primitives', default-features = false, version = '1.0.0' }

#orml
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', default-features = false }

#[dev-dependencies]
sp-runtime = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
sp-std = { default-features = false,  git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.13' }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

[features]
default = ['std']
std = [

    "frame-support/std",
    "frame-system/std",
    "pallet-multisig/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "sp-runtime/std",
    "sp-std/std",
    "codec/std",
    "listen-primitives/std",
    "orml-tokens/std",
	"scale-info/std",

]

