[package]
name       = "pallet-nft"
authors    = ["LISTEN TEAM"]
license    = 'Apache 2.0'
version    = '1.0.0'
edition = "2021"
homepage = "https://github.com/listenofficial/"
repository = "https://github.com/listenofficial/listen-parachain.git"


[dependencies]
scale-info 			  = { version = "2.0.1", default-features = false, features = ["derive"] }
codec                 = { package = 'parity-scale-codec', version = '3.0.0', default-features = false }
serde                 = { version = '1.0.136', optional = true }

sp-std          = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime      = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }


frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }

# orml
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library.git', branch = "polkadot-v0.9.24", default-features = false }

[dev-dependencies]
sp-io   = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }


[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",

	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
]
try-runtime = ["frame-support/try-runtime"]
